--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="menu">
-	<ul>
-	<li>
-		<a href="index.html">menu</a>
-	</li>
-	<li>
-		<a href="kakao.html">kakao</a>
-	</li>
-	<li>
-		<a href="#">daum</a>
-	</li>
-</ul>
-</nav>
+	<nav class="mouse-animation">
+
+		<ul>
+			<div style="padding:5px;">
+				<li><a href="#">About TearamG</a></li>
+			</div>
+			<div style="padding:5px;">
+			<li><a href="#">Our Object</a></li>
+		</div>
+			<div style="padding:5px;">
+			<li><a href="#">Our Tea</a></li></div>
+
+			<div style="padding:5px;">
+			<li><a href="#">Our Place</a></li></div>
+			<div style="padding:5px;">
+			<li><a href="#">Contact</a></li></div>
+	
+		</ul>
+	</nav>
+<div class="move-box"></div>
 
 </body>
 </html>
