--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="mouse-animation">
 
-		<ul>
-			<div style="padding:5px;">
-				<li><a href="#">About TearamG</a></li>
-			</div>
-			<div style="padding:5px;">
-			<li><a href="#">Our Object</a></li>
-		</div>
-			<div style="padding:5px;">
-			<li><a href="#">Our Tea</a></li></div>
+<div class="outer-border">
+	<div class="inner-border"></div>
+</div>
 
-			<div style="padding:5px;">
-			<li><a href="#">Our Place</a></li></div>
-			<div style="padding:5px;">
-			<li><a href="#">Contact</a></li></div>
-	
-		</ul>
-	</nav>
-<div class="move-box"></div>
+<div class="mario-container">
+	<div class="mario-coin"></div>
+	<div class="mario-box"></div>
+</div>
+
+<div class="hover-image">
+	<img src="darjeeling.jpg">
+	<div class="darjeeling">
+		<h2>Welcome to darjeeling</h2>
+		<p>Windamere Hotel</p>
+	</div>
+</div>
 
 </body>
 </html>
