--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
 	<title></title>
 </head>
 <body>
-	<h1 class="pc">Welcome to TearamG</h1>
+	<!-- <h1 class="pc">Welcome to TearamG</h1>
 	<h1 class="mobile">Mobile tearamG</h1>
 
 	<h1>미디어쿼리 응용</h1>
@@ -32,7 +32,44 @@
 			<li><a href="#">Contact</a></li></div>
 	
 		</ul>
-	</nav>
+	</nav> -->
 
+<!-- <ul class="media-new">
+	<li><a href="#">메뉴 1</a></li>
+	<li><a href="#">메뉴 1</a></li>
+	<li><a href="#">메뉴 1</a></li>
+	<li><a href="#">메뉴 1</a></li>
+</ul>
+ -->
+
+<!-- <header class="intro">
+	<h1>logo</h1>
+	<nav>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</nav>
+</header>
+
+<main role="main"></main>
+
+<h1>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world</h1>
+<h1>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world</h1>
+<h1>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world</h1>
+ -->
+
+ <div class="container">
+ 	<div class="column">
+ 		
+ 	</div>
+ 	<div class="column">
+ 		<img src="">
+ 		<div class="image-info">
+ 			<h2>title</h2>
+ 		</div>
+ 	</div>
+ </div> 
 </body>
 </html>
